test/sh/error/func/multi_param_missing_comma.sk
f(x: Int y: Int) {
	# do nothing
}
